--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 23
@@ -29,4 +30,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.1'
 
     compile 'com.fasterxml.jackson.core:jackson-databind:2.1.1'
+
+    // Dependency for Google Sign-In
+    compile 'com.google.android.gms:play-services-auth:8.3.0'
 }
