--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,12 +25,13 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
-    compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.google.android.gms:play-services-auth:8.3.0'
+
+    compile 'de.hdodenhof:circleimageview:2.0.0'
+    compile 'com.h6ah4i.android.materialshadowninepatch:materialshadowninepatch:0.6.5'
 
     compile 'com.fasterxml.jackson.core:jackson-databind:2.1.1'
-
-    // Dependency for Google Sign-In
-    compile 'com.google.android.gms:play-services-auth:8.3.0'
+    compile 'com.squareup.okhttp3:okhttp:3.0.1'
 }
