--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.h6ah4i.android.materialshadowninepatch:materialshadowninepatch:0.6.5'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 
     compile 'com.fasterxml.jackson.core:jackson-databind:2.1.1'
     compile 'com.squareup.okhttp3:okhttp:3.0.1'
