--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+
+    // Android
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
@@ -30,11 +32,16 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:8.3.0'
     compile "com.google.android.gms:play-services-gcm:8.3.0"
 
+    // Images
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.h6ah4i.android.materialshadowninepatch:materialshadowninepatch:0.6.5'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 
+    // API (HTTP, JSON)
     compile 'com.fasterxml.jackson.core:jackson-databind:2.1.1'
     compile 'com.squareup.okhttp3:okhttp:3.0.1'
     compile 'com.google.code.gson:gson:2.5'
+
+    // Search
+    compile 'com.miguelcatalan:materialsearchview:1.4.0'
 }
