--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         <activity
             android:name=".SignInActivity"
             android:label="@string/title_activity_login"
-            android:theme="@style/Theme.AppCompat">
+            android:theme="@style/MaterialDrawerTheme.ActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,7 +34,7 @@
         <activity
             android:name=".overview.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/MaterialDrawerTheme">
         </activity>
 
         <!-- [START gcm_receiver] -->
