--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true">
         <activity
-            android:name=".SignInActivity"
+            android:name=".activities.SignInActivity"
             android:label="@string/title_activity_login"
             android:theme="@style/MaterialDrawerTheme.ActionBar">
             <intent-filter>
@@ -32,7 +32,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".overview.MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/MaterialDrawerTheme">
         </activity>
@@ -51,7 +51,7 @@
 
         <!-- [START gcm_listener] -->
         <service
-            android:name="com.example.kevin.fifastatistics.gcm.MyGcmListenerService"
+            android:name=".network.gcmnotifications.MyGcmListenerService"
             android:exported="false" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
@@ -61,7 +61,7 @@
 
         <!-- [START instanceId_listener] -->
         <service
-            android:name="com.example.kevin.fifastatistics.gcm.MyInstanceIDListenerService"
+            android:name=".network.gcmnotifications.MyInstanceIDListenerService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.android.gms.iid.InstanceID"/>
@@ -70,7 +70,7 @@
         <!-- [END instanceId_listener] -->
 
         <service
-            android:name="com.example.kevin.fifastatistics.gcm.RegistrationIntentService"
+            android:name=".network.gcmnotifications.RegistrationIntentService"
             android:exported="false">
         </service>
 
