--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.2'
 
+    // Lombok
+    provided "org.projectlombok:lombok:1.16.8"
+
     // Images
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.h6ah4i.android.materialshadowninepatch:materialshadowninepatch:0.6.5'
