--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,9 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
     compile 'com.google.code.gson:gson:2.5'
 
+    // Layout
+    compile 'me.henrytao:smooth-app-bar-layout:23.2.1'
+
     // Graphs
     compile 'com.diogobernardino:williamchart:2.2'
 
