--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,7 @@ dependencies {
     // Layout
     compile 'me.henrytao:smooth-app-bar-layout:23.2.1'
     compile 'com.getbase:floatingactionbutton:1.10.1'
+    compile 'com.github.gabrielemariotti.recyclerview:recyclerview-animators:0.3.0-SNAPSHOT@aar'
 
     // Graphs
     compile 'com.diogobernardino:williamchart:2.2'
