--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ allprojects {
         jcenter()
         mavenLocal()
         mavenCentral()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     }
 }
 
