use progress-fragment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,7 @@ dependencies {
     compile 'me.henrytao:smooth-app-bar-layout:23.2.1'
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'com.github.gabrielemariotti.recyclerview:recyclerview-animators:0.3.0-SNAPSHOT@aar'
+    compile 'com.github.johnkil.android-progressfragment:progressfragment:1.4.0'
 
     // Graphs
     compile 'com.diogobernardino:williamchart:2.2'
