--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.h6ah4i.android.materialshadowninepatch:materialshadowninepatch:0.6.5'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile 'com.rmtheis:tess-two:6.0.4'
 
     // API (HTTP, JSON)
     compile 'com.squareup.okhttp3:okhttp:3.0.1'
