--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,13 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
 
+    // Search
+    compile ('com.lapism:searchview:3.7') {
+        exclude group: 'com.android.support'
+    }
+
     // Android
+    compile 'com.android.support:cardview-v7:23.2.1'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
     compile 'com.android.support:support-v4:23.2.1'
@@ -90,9 +96,6 @@ dependencies {
 
     // Graphs
     compile 'com.diogobernardino:williamchart:2.2'
-
-    // Search
-    compile 'com.lapism:searchview:2.2'
 
     // Navigation Drawer
     compile 'com.mikepenz:google-material-typeface:2.2.0.1.original@aar'
