--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,9 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
 apply plugin: 'me.tatarka.retrolambda'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.1"
 
     // For Lambda expressions with Retrolambda
     compileOptions {
@@ -21,7 +20,7 @@ android {
     defaultConfig {
         applicationId "com.example.kevin.fifastatistics"
         minSdkVersion 21
-        targetSdkVersion 23
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
@@ -58,14 +57,16 @@ dependencies {
     }
 
     // Android
-    compile 'com.android.support:cardview-v7:23.2.1'
-    compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.android.support:design:23.2.1'
-    compile 'com.android.support:support-v4:23.2.1'
-    compile "com.android.support:support-v13:23.1.1"
-    compile 'com.android.support:recyclerview-v7:23.2.1'
-    compile 'com.google.android.gms:play-services-auth:8.3.0'
-    compile "com.google.android.gms:play-services-gcm:8.3.0"
+    compile 'com.android.support:cardview-v7:25.1.0'
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:design:25.1.0'
+    compile 'com.android.support:support-v4:25.1.0'
+    compile "com.android.support:support-v13:25.1.0"
+    compile 'com.android.support:recyclerview-v7:25.1.0'
+    compile 'com.google.firebase:firebase-core:10.0.1'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.google.android.gms:play-services-auth:10.0.1'
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
 
     // RX
     compile 'io.reactivex:rxandroid:1.1.0'
@@ -110,3 +111,5 @@ dependencies {
         transitive = true
     }
 }
+
+apply plugin: 'com.google.gms.google-services'
