--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true">
 
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@mipmap/ic_launcher" />
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/colorAccent" />
+
         <activity
             android:name=".activities.SignInActivity"
             android:label="@string/app_name"
@@ -50,26 +57,11 @@
             android:theme="@style/MaterialDrawerTheme">
         </activity>
 
-        <!-- [START gcm_receiver] -->
-        <receiver
-            android:name="com.google.android.gms.gcm.GcmReceiver"
-            android:exported="true"
-            android:permission="com.google.android.c2dm.permission.SEND">
-            <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
-
-                <category android:name="gcm.play.android.samples.com.gcmquickstart"/>
-            </intent-filter>
-        </receiver>
-        <!-- [END gcm_receiver] -->
-
-
         <!-- [START gcm_listener] -->
         <service
-            android:name=".network.gcmnotifications.MyGcmListenerService"
-            android:exported="false">
+            android:name=".network.gcmnotifications.FirebaseListenerService">
             <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
             </intent-filter>
         </service>
         <!-- [END gcm_listener] -->
@@ -77,17 +69,13 @@
 
         <!-- [START instanceId_listener] -->
         <service
-            android:name=".network.gcmnotifications.MyInstanceIDListenerService"
-            android:exported="false">
+            android:name=".network.gcmnotifications.RegistrationIntentService">
             <intent-filter>
-                <action android:name="com.google.android.gms.iid.InstanceID"/>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
             </intent-filter>
         </service>
         <!-- [END instanceId_listener] -->
 
-        <service
-            android:name=".network.gcmnotifications.RegistrationIntentService"
-            android:exported="false"/>
         <service
             android:name=".views.notifications.friendrequestnotification.FriendRequestAcceptService"
             android:enabled="true"
