Start new series activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,12 @@
             android:theme="@style/MaterialDrawerTheme">
         </activity>
 
+        <activity
+            android:name=".activities.CreateSeriesActivity"
+            android:label="@string/title_activity_create_series_activity"
+            android:theme="@style/MaterialDrawerTheme">
+        </activity>
+
         <!-- [START gcm_listener] -->
         <service
             android:name=".network.gcmnotifications.FirebaseListenerService"
