--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -67,6 +71,7 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.android.gms:play-services-auth:10.0.1'
     compile 'com.google.firebase:firebase-messaging:10.0.1'
+    compile 'me.tatarka.bindingcollectionadapter:bindingcollectionadapter:1.3.0'
 
     // RX
     compile 'io.reactivex:rxandroid:1.2.1'
