--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,6 +104,7 @@ dependencies {
     // Layout
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'com.github.gabrielemariotti.recyclerview:recyclerview-animators:0.3.0-SNAPSHOT@aar'
+    compile 'com.tonicartos:superslim:0.4.13'
     compile 'com.robinhood.ticker:ticker:1.1.1'
 
     // Graphs
