Add team chooser

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,6 +106,8 @@ dependencies {
     compile 'com.github.gabrielemariotti.recyclerview:recyclerview-animators:0.3.0-SNAPSHOT@aar'
     compile 'com.tonicartos:superslim:0.4.13'
     compile 'com.robinhood.ticker:ticker:1.1.1'
+    compile 'com.google.android:flexbox:0.2.5'
+    compile 'com.github.fiskurgit:ChipCloud:3.0.3'
 
     // Graphs
     compile 'com.diogobernardino:williamchart:2.2'
