--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,8 @@ dependencies {
     // Android
     compile 'com.android.support:cardview-v7:25.1.0'
     compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:preference-v7:25.1.0'
+    compile 'com.android.support:preference-v14:25.1.0'
     compile 'com.android.support:design:25.1.0'
     compile 'com.android.support:support-v4:25.1.0'
     compile "com.android.support:support-v13:25.1.0"
@@ -102,12 +104,13 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.8.7'
 
     // Layout
-    compile 'com.getbase:floatingactionbutton:1.10.1'
+    compile 'com.github.clans:fab:1.6.4'
     compile 'com.github.gabrielemariotti.recyclerview:recyclerview-animators:0.3.0-SNAPSHOT@aar'
     compile 'com.tonicartos:superslim:0.4.13'
     compile 'com.robinhood.ticker:ticker:1.1.1'
     compile 'com.google.android:flexbox:0.2.5'
     compile 'com.github.fiskurgit:ChipCloud:3.0.3'
+    compile 'com.52inc:scoops:1.0.0'
 
     // Graphs
     compile 'com.diogobernardino:williamchart:2.2'
