--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,6 +79,14 @@
             android:theme="@style/AppTheme.Settings">
         </activity>
 
+        <activity
+            android:name=".activities.CameraActivity"
+            android:label="@string/name_camera_activity"
+            android:theme="@style/MaterialDrawerTheme"
+            android:screenOrientation="landscape"
+            android:configChanges="orientation|keyboardHidden">
+        </activity>
+
         <!-- [START gcm_listener] -->
         <service
             android:name=".network.gcmnotifications.FirebaseListenerService"
