--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,11 @@ android {
     }
 }
 
+ext {
+    android_support_version = "25.1.0"
+    google_play_services_version = "10.0.1"
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
@@ -66,18 +71,20 @@ dependencies {
     }
 
     // Android
-    compile 'com.android.support:cardview-v7:25.1.0'
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.android.support:preference-v7:25.1.0'
-    compile 'com.android.support:preference-v14:25.1.0'
-    compile 'com.android.support:design:25.1.0'
-    compile 'com.android.support:support-v4:25.1.0'
-    compile "com.android.support:support-v13:25.1.0"
-    compile 'com.android.support:recyclerview-v7:25.1.0'
-    compile 'com.google.firebase:firebase-core:10.0.1'
-    compile 'com.google.firebase:firebase-auth:10.0.1'
-    compile 'com.google.android.gms:play-services-auth:10.0.1'
-    compile 'com.google.firebase:firebase-messaging:10.0.1'
+    compile "com.android.support:cardview-v7:$android_support_version"
+    compile "com.android.support:appcompat-v7:$android_support_version"
+    compile "com.android.support:preference-v7:$android_support_version"
+    compile "com.android.support:preference-v14:$android_support_version"
+    compile "com.android.support:design:$android_support_version"
+    compile "com.android.support:support-v4:$android_support_version"
+    compile "com.android.support:support-v13:$android_support_version"
+    compile "com.android.support:recyclerview-v7:$android_support_version"
+
+    compile "com.google.firebase:firebase-core:$google_play_services_version"
+    compile "com.google.firebase:firebase-auth:$google_play_services_version"
+    compile "com.google.android.gms:play-services-auth:$google_play_services_version"
+    compile "com.google.firebase:firebase-messaging:$google_play_services_version"
+
     compile 'me.tatarka.bindingcollectionadapter:bindingcollectionadapter:1.3.0'
     compile 'me.tatarka.bindingcollectionadapter:bindingcollectionadapter-recyclerview:1.3.0'
 
