--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ android {
             debuggable true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            buildConfigField "String", "SERVER_URL", '"http://192.168.0.111:8080"'
+            buildConfigField "String", "SERVER_URL", '"https://fifastatisticsapi.azurewebsites.net/"'
         }
     }
 
