--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
-        versionName "1.0"
+        versionName "1.01"
     }
 
     // Enables subdirectories in the layout folder
@@ -49,6 +49,10 @@ android {
             debuggable true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "SERVER_URL", '"http://192.168.0.111:8080/"'
+        }
+        hockeyapp {
+            initWith(buildTypes.debug)
             buildConfigField "String", "SERVER_URL", '"https://fifastatisticsapi.azurewebsites.net/"'
         }
     }
