--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,11 @@ android {
 
     defaultConfig {
         applicationId "com.example.kevin.fifastatistics"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 25
         versionCode 1
         versionName "1.02"
+        manifestPlaceholders = [HOCKEYAPP_APP_ID: "1274ffd5e9d648108bfff6c54033d2ba"]
     }
 
     // Enables subdirectories in the layout folder
@@ -95,6 +96,8 @@ dependencies {
     compile 'me.tatarka.bindingcollectionadapter:bindingcollectionadapter:1.3.0'
     compile 'me.tatarka.bindingcollectionadapter:bindingcollectionadapter-recyclerview:1.3.0'
 
+    compile 'net.hockeyapp.android:HockeySDK:4.1.5'
+
     // RX
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.2.1'
@@ -124,6 +127,9 @@ dependencies {
     compile 'com.github.gabrielemariotti.recyclerview:recyclerview-animators:0.3.0-SNAPSHOT@aar'
     compile 'com.tonicartos:superslim:0.4.13'
     compile 'com.robinhood.ticker:ticker:1.1.1'
+
+
+    // Unused...
     compile 'com.google.android:flexbox:0.2.5'
     compile 'com.github.fiskurgit:ChipCloud:3.0.3'
     compile 'com.52inc:scoops:1.0.0'
