--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,12 @@
         </activity>
 
         <activity
+            android:name=".activities.MatchActivity"
+            android:label="@string/title_activity_match"
+            android:theme="@style/MaterialDrawerTheme">
+        </activity>
+
+        <activity
             android:name=".activities.CreateSeriesActivity"
             android:label="@string/title_activity_create_series_activity"
             android:theme="@style/MaterialDrawerTheme">
