sync current series with server

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -120,6 +120,7 @@
         </service>
 
         <service android:name=".network.service.UpdateTokenService"/>
+        <service android:name=".network.service.CurrentSeriesService"/>
 
     </application>
 
