--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -121,6 +121,7 @@
 
         <service android:name=".network.service.UpdateTokenService"/>
         <service android:name=".network.service.CurrentSeriesService"/>
+        <service android:name=".network.service.SaveImageService"/>
 
         <receiver android:name=".views.notifications.NotificationCancelingReceiver"/>
 
