--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ android {
         versionCode 1
         versionName "1.3"
         manifestPlaceholders = [HOCKEYAPP_APP_ID: "1274ffd5e9d648108bfff6c54033d2ba"]
+        multiDexEnabled true
     }
 
     // Enables subdirectories in the layout folder
@@ -91,6 +92,7 @@ dependencies {
     compile "com.android.support:support-v13:$android_support_version"
     compile "com.android.support:recyclerview-v7:$android_support_version"
     compile "com.android.support:percent:$android_support_version"
+    compile 'com.android.support:multidex:1.0.1'
 
     compile "com.google.firebase:firebase-core:$google_play_services_version"
     compile "com.google.firebase:firebase-auth:$google_play_services_version"
