--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,12 @@
         </activity>
 
         <activity
+            android:name=".activities.CreateMatchActivity"
+            android:label="@string/new_match"
+            android:theme="@style/MaterialDrawerTheme">
+        </activity>
+
+        <activity
             android:name=".activities.CreateSeriesActivity"
             android:label="@string/title_activity_create_series_activity"
             android:theme="@style/MaterialDrawerTheme">
