--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,7 +76,9 @@
         <activity
             android:name=".activities.CreateMatchActivity"
             android:label="@string/new_match"
-            android:theme="@style/MaterialDrawerTheme">
+            android:theme="@style/MaterialDrawerTheme"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden">>
         </activity>
 
         <activity
