--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -130,6 +130,7 @@
         <service android:name=".network.service.UpdateTokenService"/>
         <service android:name=".network.service.CurrentSeriesService"/>
         <service android:name=".network.service.SaveImageService"/>
+        <service android:name=".network.service.SyncPlayerCacheService"/>
 
         <receiver android:name=".views.notifications.NotificationCancelingReceiver"/>
 
