--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,31 +52,31 @@
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/MaterialDrawerTheme">
+            android:theme="@style/AppTheme">
         </activity>
 
         <activity
             android:name=".activities.PlayerActivty"
             android:label="@string/title_activity_player_activty"
-            android:theme="@style/MaterialDrawerTheme">
+            android:theme="@style/AppTheme">
         </activity>
 
         <activity
             android:name=".activities.MatchActivity"
             android:label="@string/title_activity_match"
-            android:theme="@style/MaterialDrawerTheme">
+            android:theme="@style/AppTheme">
         </activity>
 
         <activity
             android:name=".activities.MatchUpdateActivity"
             android:label="@string/title_activity_match_update"
-            android:theme="@style/MaterialDrawerTheme">
+            android:theme="@style/AppTheme">
         </activity>
 
         <activity
             android:name=".activities.CreateMatchActivity"
             android:label="@string/new_match"
-            android:theme="@style/MaterialDrawerTheme"
+            android:theme="@style/AppTheme"
             android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden">>
         </activity>
@@ -84,13 +84,13 @@
         <activity
             android:name=".activities.CreateSeriesActivity"
             android:label="@string/title_activity_create_series_activity"
-            android:theme="@style/MaterialDrawerTheme">
+            android:theme="@style/AppTheme">
         </activity>
 
         <activity
             android:name=".activities.PickTeamActivity"
             android:label="@string/activity_pick_team"
-            android:theme="@style/MaterialDrawerTheme">
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="com.example.kevin.fifastatistics.activities.PickTeamActivity" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -106,7 +106,7 @@
         <activity
             android:name=".activities.CameraActivity"
             android:label="@string/name_camera_activity"
-            android:theme="@style/MaterialDrawerTheme"
+            android:theme="@style/AppTheme"
             android:screenOrientation="landscape"
             android:configChanges="orientation|keyboardHidden">
         </activity>
