--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,8 +69,8 @@ android {
 }
 
 ext {
-    android_support_version = "25.3.0"
-    google_play_services_version = "10.0.1"
+    android_support_version = "27.0.2"
+    google_play_services_version = "10.2.1"
 }
 
 dependencies {
@@ -105,19 +105,19 @@ dependencies {
     compile 'net.hockeyapp.android:HockeySDK:4.1.5'
 
     // RX
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'io.reactivex:rxjava:1.2.1'
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'io.reactivex:rxjava:1.2.1'
 
     // Lombok
     provided "org.projectlombok:lombok:1.16.8"
     annotationProcessor "org.projectlombok:lombok:1.16.8"
 
     // Images
-    compile 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
     compile 'com.h6ah4i.android.materialshadowninepatch:materialshadowninepatch:0.6.5'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'com.rmtheis:tess-two:6.0.4'
-    compile 'com.flurgle:camerakit:0.9.18'
+    compile 'com.wonderkiln:camerakit:0.13.1'
 
     // API (HTTP, JSON)
     compile 'com.squareup.okhttp3:okhttp:3.5.0'
