--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,12 @@
         </activity>
 
         <activity
+            android:name=".activities.SeriesActivity"
+            android:label="@string/series"
+            android:theme="@style/AppTheme">
+        </activity>
+
+        <activity
             android:name=".activities.MatchUpdateActivity"
             android:label="@string/title_activity_match_update"
             android:theme="@style/AppTheme">
