--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,8 +51,8 @@ android {
             debuggable true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-//            buildConfigField "String", "SERVER_URL", '"http://192.168.0.13:8080/"'
-            buildConfigField "String", "SERVER_URL", '"https://fifastatisticsapi.azurewebsites.net/"'
+            buildConfigField "String", "SERVER_URL", '"http://192.168.0.21:8080/"'
+//            buildConfigField "String", "SERVER_URL", '"https://fifastatisticsapi.azurewebsites.net/"'
         }
         hockeyapp {
             initWith(buildTypes.debug)
